[package]
name = "audio-synthesis-shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
cpal = "0.15"
eframe = "0.21"
egui = "0.21"
futures-executor = "0.3"
oddio = "0.6"
wgpu = "0.15"
